Fix: GalleryItem width on mobile & explore tags min-width

--- a/src/components/gallery/GalleryItem.scss
+++ b/src/components/gallery/GalleryItem.scss
@@ -25,9 +25,10 @@
         background: #fff;
     }
     .picture {
+        width: 100%;
         max-width: 100%;
     }
-    // Link with the picture Id
+    // Link with image id
     .goPicture {
         position: absolute;
         top: 0;
